# cocopye

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml  python.py  requirements.txt
.github/workflows/: documentation.yml  pypi.yml
src/: ccgui.py  cctui.py  cli.py  gui.py
src/ccpy/: matrix.py
src/cocopye/: __init__.py  constants.py  core.py  histogram.py  matrices.py  pfam.py
src/cocopye/matrices/: __init__.py  _numba_functions.py
src/cocopye/preprocessing/: __init__.py  kmer.py  pfam.py
src/cocopye/ui/: __init__.py  config.py  config.toml  web.py
src/cocopye/ui/graphical/: __init__.py
src/cocopye/ui/terminal/: __init__.py
src/cocopye/ui/web/: server.py  static  tasks.py
src/cocopye/ui/web/static/: index.html  script.js
src/cocopye/ui/web/templates/: index.html  main.html
src/cocopye/ui/web_new/: server.py  tasks.py
src/libcc/: __init__.py  matrices.py  matrix.py
src/libcc/preprocessing/: __init__.py  kmer.py  pfam.py  sequence.py
src/libcc/ui/: __init__.py  config.py  external.py
src/libcc/ui/graphical/: __init__.py
src/libcc/ui/terminal/: __init__.py  config.py
tests/: matrix_test.py
views/: main.html  upload.tpl
website/: .gitignore  package-lock.json  package.json  tailwind.config.cjs
website/public/: manifest.json
website/src/: script.js
website/src/components/: Header.astro
website/src/components/docs/: DocMenu.astro
website/src/layouts/: Docs.astro  Layout.astro  MainLayout.astro
website/src/pages/: gettingstarted.astro  index.astro
website/src/pages/docs/: gettingstarted.astro  index.astro  index.md
