[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "CoCoPyE"
version = "0.1.0"
authors = [
    { name = "Niklas Birth", email = "birth@posteo.de" },
]
#description = "My package description"
readme = "README.md"
requires-python = ">=3.8"
#keywords = ["one", "two"]
#license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy==1.23",
    "numba>=0.56.4",
    "biopython==1.81",
    "argparse~=1.4.0",
    "appdirs~=1.4.4",
    "tomlkit~=0.11.6",
    "requests~=2.28.2",
    "tqdm~=4.65.0",
    "scipy~=1.10.1"
]

[project.scripts]
cocopye = "cli:main"
cocopye-gui = "gui:main"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[tool.mypy]
files = "src"
plugins = "numpy.typing.mypy_plugin"

strict = true
disallow_any_explicit = true
disallow_any_generics = true
